crates/sui-package-resolver/src/snapshots/sui_package_resolver__tests__cross_module.snap
---
source: crates/sui-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
struct 0xa0::n::T0 {
    t: struct 0xa0::m::T1<u16, u32> {
        a: address,
        p: u16,
        q: vector<u32>,
    },
    u: struct 0xa0::m::T2 {
        x: u8,
    },
}
