crates/sui-package-resolver/src/snapshots/sui_package_resolver__tests__cross_package_enum.snap
---
source: crates/sui-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
enum 0xb0::m::E0 {
    V0 {
        m: struct 0xa0::m::T2 {
            x: u8,
        },
        n: struct 0xa0::n::T0 {
            t: struct 0xa0::m::T1<u16, u32> {
                a: address,
                p: u16,
                q: vector<u32>,
            },
            u: struct 0xa0::m::T2 {
                x: u8,
            },
        },
        em: enum 0xa0::m::E2 {
            V0 {
                x: u8,
            },
        },
        en: enum 0xa0::n::E0 {
            V0 {
                t: enum 0xa0::m::E1<u16, u32> {
                    V {
                        a: address,
                        p: u16,
                        q: vector<u32>,
                    },
                },
                u: struct 0xa0::m::T2 {
                    x: u8,
                },
                l: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
            },
        },
    },
    V1 {
        em: enum 0xa0::m::E2 {
            V0 {
                x: u8,
            },
        },
        en: enum 0xa0::n::E0 {
            V0 {
                t: enum 0xa0::m::E1<u16, u32> {
                    V {
                        a: address,
                        p: u16,
                        q: vector<u32>,
                    },
                },
                u: struct 0xa0::m::T2 {
                    x: u8,
                },
                l: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
            },
        },
    },
    V2 {
        m: struct 0xa0::m::T2 {
            x: u8,
        },
        n: struct 0xa0::n::T0 {
            t: struct 0xa0::m::T1<u16, u32> {
                a: address,
                p: u16,
                q: vector<u32>,
            },
            u: struct 0xa0::m::T2 {
                x: u8,
            },
        },
        em: enum 0xa0::m::E2 {
            V0 {
                x: u8,
            },
        },
        en: enum 0xa0::n::E0 {
            V0 {
                t: enum 0xa0::m::E1<u16, u32> {
                    V {
                        a: address,
                        p: u16,
                        q: vector<u32>,
                    },
                },
                u: struct 0xa0::m::T2 {
                    x: u8,
                },
                l: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
            },
        },
    },
}
